--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <title>Bootstrap carousel</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link href="style.css" type="text/css" rel="stylesheet">
     </head>
 
 <body>
 
-   <div class="container">
+   <div class="container" style="margin-top:50px; margin-bottom:50px;">
         <div class="row">
             <div class="col-sm-12">
-                <div id="my-slider" class="carousel slide" data-target="carousel">
+                <div id="my-slider" class="carousel slider" data-target="carousel">
                         <!--  wrapper for sliders -->
                         <div class="carousel-inner">
-                            <div class="item ">
+                            <div class="item active">
                                 <img src="img/1.jpg" alt="car">
                                 <div class="carousel-caption">
                                     <h1>Nice car</h1>
@@ -40,7 +41,7 @@
                                 </div>
                             </div>
                             
-                            <div class="item active">
+                            <div class="item">
                                 <img src="img/4.jpg" alt="car">
                                 <div class="carousel-caption">
                                     <h1>Motorówa...</h1>
@@ -50,10 +51,10 @@
                         </div>
                     <!-- indicators dot nav -->
                         <ol class="carousel-indicators">
-                            <li data-target="#my-slider" data-slide-to="0"></li>
+                            <li data-target="#my-slider" data-slide-to="0" class="active"></li>
+                            <li data-target="#my-slider" data-slide-to="1"></li>
                             <li data-target="#my-slider" data-slide-to="2"></li>
                             <li data-target="#my-slider" data-slide-to="3"></li>
-                            <li data-target="#my-slider" data-slide-to="4" class="active"></li>
                         </ol>
                     
                     <!-- controls on next and prev btn -->
